--- a/course.html
+++ b/course.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -33,6 +34,8 @@
 
 <!-- End Google Tag Manager -->
 	
+	
+	
 
     <script>
         $(document).ready(function () {
@@ -57,6 +60,28 @@
                 ]
             });
         });
+	    dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
+dataLayer.push({
+  event: "purchase",
+	affiliation:"online_course",
+  ecommerce: {
+      transaction_id: "T_12345",
+      value: 25.42,
+  
+      items: [
+       {
+        item_id: "ITM_12345",
+item_name: "Python", 
+affiliation: "online_Course", 
+currency: "INR", 
+
+
+      }
+     
+      ]
+  }
+});
+	</script>
 	    </script>
 	
     <title>Course Page</title>
