--- a/course.html
+++ b/course.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTKMDD7"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
@@ -31,10 +34,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD" crossorigin="anonymous">
 	    </script>
-
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PQ6R2W5');</script>
 <!-- End Google Tag Manager -->
-	
-	
 	
 
     <script>
@@ -60,13 +66,69 @@
                 ]
             });
         });
+dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
+dataLayer.push({
+  event: "view_iten_list_event",
+  ecommerce: {
+  
+    items: [
+     {
+     item_id: "ITM_12345",
+item_name: "Python", 
+affiliation: "online_Course", 
+currency: "INR", 
+discount: 100, 
+item_brand: "MOOC",
+item_category: "Python",
+ item_category2: "ML",
+item_category3: "DS",
+item_category4: "CS",
+item_variant: "Online",
+location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo", 
+price: 5000, 
+quantity: 1
+
+    }
+	    ]
+  }    
+
+});
 	    dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
+dataLayer.push({
+  event: "add_to_cart",
+  ecommerce: {
+    items: [
+    {
+     item_id: "ITM_12345",
+item_name: "Python", 
+affiliation: "online_Course", 
+currency: "INR", 
+discount: 100, 
+item_brand: "MOOC",
+item_category: "Python",
+ item_category2: "ML",
+item_category3: "DS",
+item_category4: "CS",
+item_variant: "Online",
+location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo", 
+price: 5000, 
+quantity: 1
+
+    }
+    ]
+  }
+});
+	  
+dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
 dataLayer.push({
   event: "purchase",
 	affiliation:"online_course",
   ecommerce: {
       transaction_id: "T_12345",
       value: 25.42,
+      tax: 4.90,
+      shipping: 5.99,
+      currency: "INR",
   
       items: [
        {
@@ -74,7 +136,16 @@ dataLayer.push({
 item_name: "Python", 
 affiliation: "online_Course", 
 currency: "INR", 
-
+discount: 100, 
+item_brand: "MOOC",
+item_category: "Python",
+ item_category2: "ML",
+item_category3: "DS",
+item_category4: "CS",
+item_variant: "Online",
+location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo", 
+price: 5000, 
+quantity: 1
 
       }
      
@@ -82,16 +153,20 @@ currency: "INR",
   }
 });
 	</script>
-	    </script>
-	
-    <title>Course Page</title>
+
+    <title>Contact Page</title>
 </head>
 
 <body>
 	<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PQ6R2W5"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTKMDD7"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTKMDD7"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	
     <!-- navbar -->
     
     <!-- navbar -->
@@ -126,16 +201,30 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 &emsp;  &emsp;  <img src="img/1.jpg" width="500" height="200">
 </p>
 
-&emsp;  &emsp;  &emsp;  &emsp;  <button><a href="cart.html" style="font: bold 24px Arial; color:red;">Add-to-cart</a></button> &emsp;  &emsp;  			 
+&emsp;  &emsp;  &emsp;  &emsp;  <button id="btncart1"><a href="cart.html" id="btncart12" style="font: bold 24px Arial; color:red;">Add-to-cart</a></button> &emsp;  &emsp;  			 
 <button type="button" style="font: bold 24px  Arial; color:green;"><a href="sucess.html">Purchase</a></button><br />
 </br></br>
 <p>
-&emsp;  &emsp;  <img src="img/2.jpg" width="500" height="200">
+&emsp;  &emsp;  <img src="img/2.jfif" width="500" height="200">
 </p>
 
-&emsp;  &emsp;  &emsp;  &emsp;  <button><a href="cart.html" style="font: bold 24px Arial; color:red;">Add-to-cart</a></button> &emsp;  &emsp;  			 
-<button type="button" style="font: bold 24px  Arial; color:green;"><a href="sucess.html">Purchase</a></button><br />
+&emsp;  &emsp;  &emsp;  &emsp;  <button id="btncart"><a href="cart.html" style="font: bold 24px Arial; color:red;">Add-to-cart</a></button> &emsp;  &emsp;  			 
+<button type="button" style="font: bold 24px  Arial; color:green;"><a href="sucess.html" id="btncart1">Purchase</a></button><br />
 
 </body>
 
 </html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
