--- a/course.html
+++ b/course.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-46V1LCY3BZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-46V1LCY3BZ');
+</script>
+
 	<!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTKMDD7"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
