--- a/course.html
+++ b/course.html
@@ -8,6 +8,13 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WSRFTFW');</script>
+<!-- End Google Tag Manager -->
 
   gtag('config', 'G-46V1LCY3BZ');
 </script>
@@ -76,59 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 ]
             });
         });
-dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
-dataLayer.push({
-  event: "view_iten_list_event",
-  ecommerce: {
-  
-    items: [
-     {
-     item_id: "ITM_12345",
-item_name: "Python", 
-affiliation: "online_Course", 
-currency: "INR", 
-discount: 100, 
-item_brand: "MOOC",
-item_category: "Python",
- item_category2: "ML",
-item_category3: "DS",
-item_category4: "CS",
-item_variant: "Online",
-location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo", 
-price: 5000, 
-quantity: 1
 
-    }
-	    ]
-  }    
-
-});
-	    dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
-dataLayer.push({
-  event: "add_to_cart",
-  ecommerce: {
-    items: [
-    {
-     item_id: "ITM_12345",
-item_name: "Python", 
-affiliation: "online_Course", 
-currency: "INR", 
-discount: 100, 
-item_brand: "MOOC",
-item_category: "Python",
- item_category2: "ML",
-item_category3: "DS",
-item_category4: "CS",
-item_variant: "Online",
-location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo", 
-price: 5000, 
-quantity: 1
-
-    }
-    ]
-  }
-});
-	  
 dataLayer.push({ ecommerce: null });  // Clear the previous ecommerce object.
 dataLayer.push({
   event: "purchase",
@@ -146,16 +101,6 @@ dataLayer.push({
 item_name: "Python", 
 affiliation: "online_Course", 
 currency: "INR", 
-discount: 100, 
-item_brand: "MOOC",
-item_category: "Python",
- item_category2: "ML",
-item_category3: "DS",
-item_category4: "CS",
-item_variant: "Online",
-location_id: "ChIJIQBpAG2ahYAR_6128GcTUEo", 
-price: 5000, 
-quantity: 1
 
       }
      
@@ -174,6 +119,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 	<!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KTKMDD7"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSRFTFW"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 	
