--- a/course.html
+++ b/course.html
@@ -14,9 +14,9 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WSRFTFW');</script>
+})(window,document,'script','dataLayer','GTM-M4RL3RJ');</script>
 <!-- End Google Tag Manager -->
-
+	
   gtag('config', 'G-46V1LCY3BZ');
 </script>
 
@@ -115,9 +115,8 @@ currency: "INR",
 
 <body>
 
-	
 	<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WSRFTFW"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M4RL3RJ"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 	
